# IdlConverter

./: CMakeLists.txt  README.md  build.sh
module/linux/: idl2xml
src/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  licensedialog.cpp  licensedialog.h  licensedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
